# brutalpywebui

./: .gitignore  LICENSE  README.md  example.py  gen_readme.py  pyproject.toml
brutalpywebui/: __init__.py  favicon.py  font.py  normalize_css.py  script.py  wrapper.py
